Four datasets printing

--- a/2017-05-02-matplotlib-intro.org
+++ b/2017-05-02-matplotlib-intro.org
@@ -229,3 +229,113 @@ tags: [matplotlib]
     [[file:]]
 
     [[http://0--key.github.io/assets/img/plt/parabola.png]]
+
+
+* Four datasets on one picture
+
+  #+BEGIN_SRC python :results output :session perc :eval noexport
+    datasets = ['data/dataset1.mat', 'data/dataset2.mat',
+                'data/dataset3.mat', 'data/dataset4.mat']
+    for i in datasets:
+        (nen, pen, wi, wg) = read_dataset(i)
+        print(nen, '\n\n', pen, '\n\n', wi, '\n\n', wg)
+        print('\n\n\n')
+  #+END_SRC
+
+  #+RESULTS:
+  #+begin_example
+
+  >>> ... ... ... ... [[-0.80857143  0.8372093 ]
+   [ 0.35714286  0.85049834]
+   [-0.75142857 -0.73089701]
+   [-0.3         0.12624585]] 
+
+   [[ 0.87142857  0.62458472]
+   [-0.02       -0.92358804]
+   [ 0.36285714 -0.31893688]
+   [ 0.88857143 -0.87043189]] 
+
+   [[-0.62170147]
+   [ 0.76091527]
+   [ 0.77187205]] 
+
+   [[ 4.3496526 ]
+   [-2.60997235]
+   [-0.69414749]]
+
+
+
+
+  [[-0.80857143  0.8372093 ]
+   [ 0.35714286  0.85049834]
+   [-0.75142857 -0.73089701]
+   [-0.3         0.12624585]
+   [ 0.64285714 -0.5448505 ]] 
+
+   [[ 0.87142857  0.62458472]
+   [-0.02       -0.92358804]
+   [ 0.36285714 -0.31893688]
+   [ 0.88857143 -0.87043189]
+   [-0.52857143  0.51162791]] 
+
+   [[ 1.84689887]
+   [-0.58324929]
+   [-0.54178883]] 
+
+   []
+
+
+
+
+  [[-0.79142857  0.07973422]
+   [-0.55714286  0.41196013]
+   [-0.22571429  0.69767442]
+   [ 0.16285714  0.83056478]
+   [ 0.46        0.65780731]
+   [ 0.73428571  0.33887043]
+   [ 0.82571429 -0.01328904]] 
+
+   [[-0.76285714 -0.19269103]
+   [-0.60285714 -0.48504983]
+   [-0.38571429 -0.69767442]
+   [-0.19142857 -0.35880399]
+   [ 0.28285714 -0.43189369]
+   [ 0.40857143 -0.69767442]
+   [ 0.75142857 -0.23255814]] 
+
+   [[ 0.90368034]
+   [-0.49087549]
+   [ 0.94855295]] 
+
+   [[ -0.67272864]
+   [-11.48921717]
+   [ -0.89411095]]
+
+
+
+
+  [[-0.86571429 -0.39202658]
+   [-0.78571429 -0.17275748]
+   [-0.55714286  0.24584718]
+   [-0.28857143  0.52491694]
+   [-0.12857143  0.52491694]
+   [ 0.08285714  0.33222591]
+   [ 0.18        0.10631229]
+   [ 0.25428571 -0.16611296]
+   [ 0.32857143 -0.35215947]] 
+
+   [[-0.08857143  0.23255814]
+   [ 0.00857143 -0.06644518]
+   [ 0.12857143 -0.3255814 ]
+   [ 0.28857143 -0.52491694]
+   [ 0.59714286 -0.46511628]
+   [ 0.71714286 -0.1461794 ]
+   [ 0.86        0.15946844]
+   [ 0.94571429  0.44518272]] 
+
+   [[-0.03182596]
+   [-0.25511273]
+   [-0.00710252]] 
+
+   []
+#+end_example
