--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -12,7 +12,7 @@ tags: [coding, algorithms]
 #+STARTUP: showall
 #+OPTIONS: tags:nil num:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
 #+TOC: headlines 2
-#+PROPERTY:header-args :results output :exports both :eval never-export
+#+PROPERTY:header-args :results output :exports both :eval no-export
 
 * #1 Vowels counter
 
