Observed PIN task appropriate solution

--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -2645,6 +2645,7 @@ tags: [coding, algorithms]
      assert(palindrome(3, ['a', 'b']) == 'aba')
      assert(palindrome(4, ['a', 'b']) == 'abba')
    #+END_SRC
+
 * #36 The observed PIN
   
 ** Description
@@ -2685,3 +2686,24 @@ tags: [coding, algorithms]
    '0's. We already prepared some test cases for you. Detective, we count
    on you!
 
+** Solution
+   #+BEGIN_SRC python :results output :exports code
+     def get_pins(observed):
+         '''TODO: This is your job, detective!'''
+         pass
+
+     test.describe('example tests')
+     expectations = [('8', ['5', '7', '8', '9', '0']),
+                     ('11', ["11", "22", "44", "12", "21", "14", "41",
+                     "24", "42"]),
+                     ('369', ["339", "366", "399", "658", "636", "258",
+                     "268", "669", "668", "266", "369", "398", "256",
+                     "296", "259", "368", "638", "396", "238", "356",
+                     "659", "639", "666", "359", "336", "299", "338",
+                     "696", "269", "358", "656", "698", "699", "298",
+                     "236", "239"])]
+
+     for tup in expectations:
+         test.assert_equals(sorted(get_pins(tup[0])), sorted(
+             tup[1]), 'PIN: ' + tup[0])
+   #+END_SRC
