--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -2611,6 +2611,25 @@ tags: [coding, algorithms]
      #             permutations(head[0:i] + head[i+1:], tail+head[i])
      #     return result
 
+
+     def insertion_shift(s, i):
+         result = []
+         l = list(s)
+         letter = l.pop(i)
+         for j in range(len(l) + 1):
+             cutted = l[:]
+             cutted.insert(j, letter)
+             result.append("".join(cutted))
+         return result
+
+
+     def leap_shift(s):
+         result = []
+         for i in range(len(s)):
+             result.extend(insertion_shift(s, i))
+         return sorted(list(set(result)))
+
+
      def cyclic_shift(s):
          l = list(s)
          tail = l.pop()
