MathJax in action

--- a/2017-03-28-neural-network-architecture.org
+++ b/2017-03-28-neural-network-architecture.org
@@ -320,6 +320,8 @@ An overview of the main types of neural network architecture
       (plus a bias).
    - Then output a 1 if the weighted sum exceeds zero.
 
+   $z = /displaystyleb + /sum_{i} x_{i}w_{i}$
+
 ** How to learn biases using the same rule as we use for learning weights
    #+CAPTION: Binary Threshold Neuron – Training Biases
    #+ATTR_HTML: :alt  :title Binary Threshold Neuron – Training Biases :align right
