--- a/2017-03-28-neural-network-architecture.org
+++ b/2017-03-28-neural-network-architecture.org
@@ -654,7 +654,7 @@ An overview of the main types of neural network architecture
    vector!
 
 ** Why the learning procedure works
-   So consider “generously feasible” weight vectors that lie within
+   So consider /generously feasible/ weight vectors that lie within
    the feasible region by a margin at least as great as the length of
    the input vector that defines each constraint plane.
 
