--- a/2017-05-09-nltk.org
+++ b/2017-05-09-nltk.org
@@ -243,3 +243,81 @@ tags: [nlp]
 
    3 directories, 7 files
 #+end_example
+
+* NLTK in depth
+
+** =app=
+   #+BEGIN_SRC sh :results output
+   cd ../nltk/
+   cat nltk/app/__init__.py
+   tree nltk/app -L 1
+   #+END_SRC
+
+   #+RESULTS:
+   #+begin_example
+   # Natural Language Toolkit: Applications package
+   #
+   # Copyright (C) 2001-2017 NLTK Project
+   # Author: Edward Loper <edloper@gmail.com>
+   #         Steven Bird <stevenbird1@gmail.com>
+   # URL: <http://nltk.org/>
+   # For license information, see LICENSE.TXT
+
+   """
+   Interactive NLTK Applications:
+
+   chartparser:  Chart Parser
+   chunkparser:  Regular-Expression Chunk Parser
+   collocations: Find collocations in text
+   concordance:  Part-of-speech concordancer
+   nemo:         Finding (and Replacing) Nemo regular expression tool
+   rdparser:     Recursive Descent Parser
+   srparser:     Shift-Reduce Parser
+   wordnet:      WordNet Browser
+   """
+
+
+   # Import Tkinter-based modules if Tkinter is installed
+   try:
+       from six.moves import tkinter
+   except ImportError:
+       import warnings
+       warnings.warn("nltk.app package not loaded "
+                     "(please install Tkinter library).")
+   else:
+       from nltk.app.chartparser_app import app as chartparser
+       from nltk.app.chunkparser_app import app as chunkparser
+       from nltk.app.collocations_app import app as collocations
+       from nltk.app.concordance_app import app as concordance
+       from nltk.app.nemo_app import app as nemo
+       from nltk.app.rdparser_app import app as rdparser
+       from nltk.app.srparser_app import app as srparser
+       from nltk.app.wordnet_app import app as wordnet
+
+       try:
+           from matplotlib import pylab
+       except ImportError:
+           import warnings
+           warnings.warn("nltk.app.wordfreq not loaded "
+                         "(requires the matplotlib library).")
+       else:
+           from nltk.app.wordfreq_app import app as wordfreq
+
+   # skip doctests from this package
+   def setup_module(module):
+       from nose import SkipTest
+       raise SkipTest("nltk.app examples are not doctests")
+   nltk/app
+   ├── chartparser_app.py
+   ├── chunkparser_app.py
+   ├── collocations_app.py
+   ├── concordance_app.py
+   ├── __init__.py
+   ├── nemo_app.py
+   ├── rdparser_app.py
+   ├── srparser_app.py
+   ├── wordfreq_app.py
+   └── wordnet_app.py
+
+   0 directories, 10 files
+#+end_example
