--- a/2017-04-19-perceptron-in-python-oop.org
+++ b/2017-04-19-perceptron-in-python-oop.org
@@ -111,6 +111,35 @@ tags: [perceptron, oop]
                  self.dendrons[i].weight = weights_array[i]
    #+END_SRC
 
+** Test suite
+
+*** Network initialization
+    #+BEGIN_SRC python :session nn :exports both
+      NN = NeuralNetwork(2)
+      NN.update_weights([0.1, 0.2, 0.3, 0.4])
+      for i in NN.dendrons:
+          print(i.weight)
+    #+END_SRC
+
+    #+RESULTS:
+    : 
+    : >>> ... ... 0.1
+    : 0.2
+    : 0.3
+    : 0.4
+
+*** Input handling
+    #+BEGIN_SRC python :session nn :exports both
+     NN.eval_input([1, 1])
+     for i in NN.neurons:
+         print(i.output)    
+    #+END_SRC
+
+    #+RESULTS:
+    : 
+    : ... ... 0.30000000000000004
+    : 0.7
+
 
 * Scratches                                                        :noexport:
   In an initial form the perceptron is a single-layer neural
