--- a/2017-05-12-bayesian.org
+++ b/2017-05-12-bayesian.org
@@ -19,3 +19,37 @@ tags: [Bayes, theorem]
 * Explanation
 
 * Examples
+
+** Brest cancer detection
+   1% of women at age forty who participate in routine screening have
+   breast cancer. 80% of women with breast cancer will get positive
+   mammographies. 9.6% of women without breast cancer will also get
+   positive mammographies. A woman in this age group had a positive
+   mammography in a routine screening. What is the probability that
+   she actually has breast cancer?
+   
+** Explanation
+   The correct answer is 7.8%, obtained as follows: Out of 10,000
+   women, 100 have breast cancer; 80 of those 100 have positive
+   mammographies. From the same 10,000 women, 9,900 will not have
+   breast cancer and of those 9,900 women, 950 will also get positive
+   mammographies. This makes the total number of women with positive
+   mammographies 950+80 or 1,030. Of those 1,030 women with positive
+   mammographies, 80 will have cancer. Expressed as a proportion, this
+   is 80/1,030 or 0.07767 or 7.8%.
+
+   To put it another way, before the mammography screening, the 10,000
+   women can be divided into two groups:
+
+   - Group 1: 100 women with breast cancer. 
+   - Group 2: 9,900 women without breast cancer.
+
+   Summing these two groups gives a total of 10,000 patients,
+   confirming that none have been lost in the math. After the
+   mammography, the women can be divided into four groups:
+
+   - Group A: 80 women with breast cancer, and a positive mammography.
+   - Group B: 20 women with breast cancer, and a negative mammography.
+   - Group C: 950 women without breast cancer, and a positive mammography.
+   - Group D: 8,950 women without breast cancer, and a negative mammography.
+
