--- a/2017-05-12-bayesian.org
+++ b/2017-05-12-bayesian.org
@@ -15,6 +15,16 @@ tags: [Bayes, theorem]
 #+PROPERTY:header-args :results output :exports both
 
 * Definition
+  Bayes' theorem is a formula that describes how to update the
+  probabilities of hypotheses when given evidence. It follows simply
+  from the axioms of conditional probability, but can be used to
+  powerfully reason about a wide range of problems involving belief
+  updates.
+
+  Given a hypothesis *H* and evidence *E*, Bayes' theorem states that
+  the relationship between the probability of the hypothesis *P(H)*
+  before getting the evidence and the probability *P(H|E)* of the
+  hypothesis after getting the evidence is:
 
 * Explanation
 
