Anki intro category and tagset

--- a/catalogue.org
+++ b/catalogue.org
@@ -8,6 +8,13 @@
 #+TOC: headlines 2
 #+PROPERTY:header-args :results output :exports both :eval no-export
 
+* Learning Technology
+
+** Anki
+
+*** Installation
+
+
 * Emacs
 
 ** Installation
