A core concept defining

--- a/catalogue.org
+++ b/catalogue.org
@@ -8,6 +8,12 @@
 #+TOC: headlines 2
 #+PROPERTY:header-args :results output :exports both :eval no-export
 
+
+* General Concepts
+
+  - Categories begin from capital letter;
+  - Tags does not
+
 * Learning Technology
 
 ** Anki
