--- a/2017-05-25-grammar.org
+++ b/2017-05-25-grammar.org
@@ -22,6 +22,9 @@ tags: [grammar]
 * Prerequisites
 
 ** Check up Java
+
+   e.g. ~langtool~ is Java package
+   
    #+BEGIN_SRC sh
    java -version
    #+END_SRC
@@ -31,7 +34,11 @@ tags: [grammar]
    : OpenJDK Runtime Environment (IcedTea 2.6.9) (7u131-2.6.9-2~deb8u1)
    : OpenJDK 64-Bit Server VM (build 24.131-b00, mixed mode)
 
+   /Java 7/ is installed already
 ** Check up Java libs
+
+   Where all stuff located on your system
+   
    #+BEGIN_SRC sh
    which java
    #+END_SRC
@@ -39,27 +46,15 @@ tags: [grammar]
    #+RESULTS:
    : /usr/bin/java
 
+   Perfect, now it's time to determine an appropriate place to
+   allocate your /Java/ packages.
+   
    #+BEGIN_SRC sh
    ls /usr/local/java
    #+END_SRC
 
    #+RESULTS:
    : ditaa0_9.jar
-
-   #+BEGIN_SRC elisp :results value
-       (expand-file-name
-       "ditaa.jar"
-       (file-name-as-directory
-       (expand-file-name
-       "scripts"
-       (file-name-as-directory
-       (expand-file-name
-       "../contrib"
-       (file-name-directory (org-find-library-dir "org")))))))   
-   #+END_SRC
-
-   #+RESULTS:
-   : /home/antony/.emacs.d/elpa/contrib/scripts/ditaa.jar
 
 ** Download languagetool
 
@@ -117,7 +112,7 @@ tags: [grammar]
     (global-set-key "\C-x4c" 'langtool-correct-buffer)
 
     (setq langtool-default-language "en-US")
-    ;;(setq langtool-java-bin "/usr/bin/java")
+    ;;(setq langtool-java-bin "/usr/bin/java") ;; perhaps
   #+END_SRC
 
   #+RESULTS:
