First screenshot there

--- a/2017-05-25-grammar.org
+++ b/2017-05-25-grammar.org
@@ -115,3 +115,10 @@ tags: [grammar]
   #+END_SRC
 
   #+RESULTS:
+
+* Final check
+  
+  #+CAPTION: langTool usage
+  #+ATTR_HTML: :alt Grammar :title Grammar check :align right
+  #+ATTR_HTML: :width 80%
+  [[http://0--key.github.io/assets/img/grammar/first_test.png]]
