--- a/2016-08-24-index.org
+++ b/2016-08-24-index.org
@@ -4,8 +4,8 @@ layout: page
 title: Intro
 tagline: 'Cook it gently._/\/\/^\/\/\/-<8<'
 permalink: /index.html
-categories: [emacs, literate programming, data science]
-tags: [sotfware development, emacs, Python, learning]
+categories: [Emacs, Data Science]
+tags: [concept, overview]
 ---
 #+END_HTML
 #+STARTUP: showall
