--- a/2016-08-24-index.org
+++ b/2016-08-24-index.org
@@ -1,4 +1,4 @@
-#+BEGIN_HTML
+#+BEGIN_EXPORT html
 ---
 layout: page
 title: Intro
@@ -7,7 +7,8 @@ permalink: /index.html
 categories: [Emacs, Data Science]
 tags: [concept, overview]
 ---
-#+END_HTML
+#+END_EXPORT
+
 #+STARTUP: showall
 #+OPTIONS: tags:nil toc:nil num:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
 #+TOC: headlines 2
