--- a/2017-05-23-anki-intro.org
+++ b/2017-05-23-anki-intro.org
@@ -120,3 +120,10 @@ tags: [anki, intro, installation]
   
 ** Log out and log back
    into your session
+
+** Launch =Anki=
+
+   #+CAPTION: Anki window
+   #+ATTR_HTML: :alt Looks pretty :title User-Friendly :align center
+   #+ATTR_HTML: :width 80%
+   [[http://0--key.github.io/assets/img/anki/main_window.png]]
