--- a/2016-08-24-index.org
+++ b/2016-08-24-index.org
@@ -69,7 +69,7 @@ tags: [concept, overview]
    #+HTML: </p>
    #+END_QUOTE
    -----
-** Why Test Driven Development Is Such Effective?
+** Why Test Driven Development Is Such Effective?                  :noexport:
 
    #+BEGIN_QUOTE
    As the TDD approach became a standard option in software development
@@ -105,7 +105,7 @@ tags: [concept, overview]
    #+END_EXPORT
    #+END_QUOTE
 
-** Brief prelude                                                    :prelude:
+** Brief prelude                                           :prelude:noexport:
 
    #+BEGIN_QUOTE
    Any science is an experience which forged and enveloped in some
@@ -122,7 +122,7 @@ tags: [concept, overview]
    - And as a final stage in data cooking it might be data visualisation.
    #+END_QUOTE
 
-** General description                                          :description:
+** General description                                 :description:noexport:
 
    There are infinite number of wrong approaches and the best path to
    achieve some skill is to learn it by doing. For example it's
@@ -132,7 +132,7 @@ tags: [concept, overview]
    great thinkers, who ponder about most of our modern science in the
    same way. All they was scholars and learn all life long.
 
-** Preamble
+** Preamble                                                        :noexport:
 
    #+BEGIN_QUOTE
    Of cause learning by doing is an uttermost level of human creativity.
@@ -156,7 +156,7 @@ tags: [concept, overview]
     idioms are available to test on Emacs frame.
     #+END_QUOTE
 
-** Prerequisites
+** Prerequisites                                                   :noexport:
 
 *** Ubuntu 14/16.04
 
@@ -164,7 +164,7 @@ tags: [concept, overview]
 
 *** Emacs 24.4
 
-* Toolset overview
+* Toolset overview                                                 :noexport:
 ** Emacs
 *** Tips
 
@@ -197,7 +197,7 @@ tags: [concept, overview]
 
 *** Tips
    
-* Methodology
+* Methodology                                                      :noexport:
 
 
   #+BEGIN_QUOTE
@@ -210,8 +210,8 @@ tags: [concept, overview]
   in their seeds.
   #+END_QUOTE
 
-* Topics
+* Topics                                                           :noexport:
 
-* Feedback
+* Feedback                                                         :noexport:
 
-* Conclusion
+* Conclusion                                                       :noexport:
